# daggersands

./: Cargo.toml
assets/manifests/: monsters.ron
src/: camera.rs  components.rs  events.rs  globals.rs  input.rs  main.rs  random.rs  utils.rs
src/game/: actions.rs  animation.rs  gamelog.rs  mod.rs  npcs.rs  player.rs
src/graphics/: assets.rs  mod.rs  pieces.rs  tiles.rs
src/map/: components.rs  mod.rs  systems.rs
src/maps/: generator.rs  indexing.rs  map.rs  mod.rs
src/maps/generators/: mod.rs  simple_map.rs  utils.rs
src/pieces/: mod.rs  player.rs
src/pieces/monsters/: mod.rs  orc.rs
src/ui/: character_status_ui.rs  gamelog.rs  gamelog_ui.rs  mod.rs
