[package]
name = "daggersands"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.15.2"
bracket-pathfinding = "0.8.7"
bracket-geometry = "0.8.7"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Required for wgpu/bevy
[workspace]
resolver = "2"
